SQuirreL SQL FX Change Log
==============================

Bug fix: Tools popup and bookmarks popup didn't scroll right when up or down key was used.

Feature: Alias name in SQL history search dialog.

Upgraded RichTextFX to version 0.6.6 and fixed the code completion problem that resulted from changes in RichTextFX, see some paragraphs below.
  Note: This makes SQuirreL FX compatible with jdk1.8.0_60.

Bug fix: When an area of a result table was selected that exceeded valid columns, a NullPointerException occurred when any table copy function was executed.

Bug fix: File handling now remembers the last directory.

Bug fix: Fixed memory leak concerning toolbar buttons.
  Excerpt from Steven Zecks mail announcing the problem:
  "Part of the problem now is the ToolbarButtonsHandler from commit 54d130.
  I used the ActionUtils/ActionManager/ActionHandle classes to manage the rerun SQL button and action in the results tab ...
  But now when the results tab is closed and/or rerun, the _buttons list in ToolbarButtonsHandler isn't cleared, causing a memory leak."

Feature: File save, open etc. in SQL editor.

Feature: Toolbar buttons and menus that have Session wide concern (e.g. transaction buttons or schema reload button)
   are now automatically available in a Session's main tab as well as in additional SQL tabs.

Feature: Rerun current open results tab (ctrl+shift+enter) or using icon

Bug fix: Wrong messages when transactions where committed/rollbacked.

Bug fix: Code completion didn't work right on Windows: When the completion popup was opened using ctrl+space the space character was still added to the editors text.
  This bug was fixed rolling back RichTextFX from version 0.6.4 to 0.6.3.
  Technical detail: All code changes to RichTextFX between versions 0.6.3 and 0.6.4 can be found here: https://github.com/TomasMikula/RichTextFX/compare/v0.6.3...master

Feature: Database reconnect

Feature: Toggle between auto commit and manual commit or rollback
