@@ -1,6 +1,8 @@
 SQuirreL SQL FX Change Log
 ==============================
 
+Improved Object tree performance: Details tabs are now loaded on demand.
+
 Bug fix: Tools popup and bookmarks popup didn't scroll right when up or down key was used.
 
 Feature: Alias name in SQL history search dialog.
